--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 colored = "3.0.0"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8.23"
