--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ tokio = { version = "1", features = ["full"] }
 colored = "3.0.0"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.23"
+serde_json = "1.0.140"
